Update .gitignore to include build files
executables and build-time files do not need to be saved to repo, ignored

--- a/.gitignore
+++ b/.gitignore
@@ -73,3 +73,8 @@ crashlytics-build.properties
 
 .vsconfig
 Assets/data.txt
+myFaraday.exe
+UnityCrashHandler64.exe
+UnityPlayer.dll
+myFaraday_Data/*
+MonoBleedingEdge/*
